--- a/css/Style1.css
+++ b/css/Style1.css
@@ -4,26 +4,95 @@ light Blue: #19B5FE
 Dark Blue: #0670E8
 */
 
+/*Normalizing*/
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+/* Default properties of all the body elements */
 body {
     font-family: "Lato", sans-serif;
     font-weight: 400;
-    padding: 30px;
+    padding: 50px;
+    line-height: 1.7
 }
 
 .header {
     height: 95vh;
-    background-image:linear-gradient(
-        to right, 
-        rgb(126,213,111,0.6), 
-        rgb(40,180,131,0.6)), 
-        url(../assets/hero.jpg);
+    
+    /*    linear-gradient -> color effect in the specified direction */
+    background-image: linear-gradient( to right, rgb(126, 213, 111, 0.8), rgb(40, 180, 131, 0.8)), url(../assets/hero.jpg);
+    
     background-size: cover;
     background-position: center;
-    clip-path: polygon(0 0,100% 0, 100% 75%, 0 100%);
+    
+    /*    shaping the background image*/
+    clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
+    
+    position: relative;
+}
+
+.logo-box {
+    position: relative;
+    padding: 40px;
+}
+
+.logo {
+    height: 38px;
+}
+
+.text-box {
+    position: absolute;
+    color: #ffffff;
+    text-transform: uppercase;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%)
+}
+
+/*Main-heading in the heading-text-box*/
+.text-box-primaryT {
+    display: block;
+    font-size: 60px;
+    letter-spacing: 30px;
+    font-weight: 500;
+    animation: moveToRight 5s ease-in-out;
+}
+
+/*Sub-heading in the heading-text-box*/
+.text-box-subT {
+    display: block;
+    font-size: 22px;
+    letter-spacing: 17px;
+    font-weight: 600;
+    animation: moveToLeft 3s ease-in-out;
+}
+
+/*Heading animation*/
+@keyframes moveToRight {
+    0%{
+        opacity: 0;
+        transform: translateX(-100px);
+    }
+    50% {
+        transform: translate(300px);
+    }
+    100%{
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+/*Heading animation*/
+@keyframes moveToLeft {
+    0%{
+        opacity: 0;
+        transform: translateX(100px);
+    }
+    100%{
+        opacity: 1;
+        transform: translateX(0);
+    }
 }
