--- a/css/Style1.css
+++ b/css/Style1.css
@@ -5,6 +5,7 @@ Dark Blue: #0670E8
 */
 
 /*Normalizing*/
+
 * {
     margin: 0;
     padding: 0;
@@ -95,4 +96,40 @@ body {
         opacity: 1;
         transform: translateX(0);
     }
+}   0% {
+        opacity: 0;
+        transform: translateX(100px);
+    }
+    50% {
+        transform: translate(-100px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+/* Modifying the button */
+
+.btn:link,
+.btn:visited {
+    display: inline-block;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-size: 15px;
+    padding: 18px 34px;
+    border-radius: 150px;
+    transition: 0.2s;
+ }
+.btn:hover {
+    box-shadow: 0px 10px 5px rgba(0, 0, 0, 0.2);
+    transform: translateY(-3px);
+}
+.btn:active {
+    transform: translateZ(1px);
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
+}
+.btn-white {
+    background-color: #ffffff;
+    color: #777777;
 }
